--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kibbutz Maabarot Income Calculation</title>
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/styles.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
